Aplicando estilos del widget lateral de recompensas al summary de recompensas

--- a/view/css/project/view.css
+++ b/view/css/project/view.css
@@ -104,6 +104,7 @@ body.project-show div#main div.widget.user {
 }
 
 body.project-show div#main div.widget.project-summary,
+body.project-show div#main div.widget.project-rewards-summary,
 body.project-show div#main div.widget.project-share,
 body.project-show div#main div.widget.project-needs,
 body.project-show div#main div.widget.project-messages,
