--- a/view/css/project/widget/messages.css
+++ b/view/css/project/widget/messages.css
@@ -6,11 +6,29 @@ div.project-messages div.message {
     position: relative;
 }
 
-div.project-messages div.message + div.message {
+div.project-messages div.child{
+    background: #e7e7e7 url('/view/css/message/beak/1.png') no-repeat left top;
+    margin-left: 130px;
+    padding: .5em 1em .5em 1.5em;
+    overflow: visible;
+    position: relative;
+}
+
+div.project-messages div.owner {
+    background: #e9f4ea url('/view/css/message/beak/2.png') no-repeat left top !important;
+}
+
+div.project-messages div.owner {
+    background: #e9f4ea url('/view/css/message/beak/2.png') no-repeat left top !important;
+}
+
+div.project-messages div.message + div.message,
+div.project-messages div.child {
     margin-top: 20px;
 }
 
-div.project-messages div.message .avatar {
+div.project-messages div.message .avatar,
+div.project-messages div.child .avatar {
     position: absolute;
     left: -60px;
     top: 0;
@@ -20,7 +38,8 @@ div.project-messages div.message .avatar {
     background: url('../../avatar/s.png');    
 }
 
-div.project-messages div.message .user {
+div.project-messages div.message .user,
+div.project-messages div.child .user {
     text-transform: none;
     font-size: 14px;
     font-weight: bold;
@@ -28,30 +47,35 @@ div.project-messages div.message .user {
     float: left;
 }
 
-div.project-messages div.message .date {
+div.project-messages div.message .date,
+div.project-messages div.child .date {
     float: right;
     color: #808080;
     font-size: 11px;
 }
 
-div.project-messages div.message blockquote {
+div.project-messages div.message blockquote,
+div.project-messages div.child blockquote {
     margin: 0;
     padding: 0;
     clear: both;
 }
 
-div.project-messages div.message .actions {
+div.project-messages div.message .actions,
+div.project-messages div.child .actions {
     margin-top: 1em;
     border-top: 1px solid #c8c8c8;
     padding-top: .4em;
 }
 
-div.project-messages div.message .actions a {
+div.project-messages div.message .actions a,
+div.project-messages div.child .actions a {
     color: #808080;
     font-size: 11px;
     text-decoration: none;
 }
 
-div.project-messages div.message .actions a:hover {
+div.project-messages div.message .actions a:hover,
+div.project-messages div.child .actions a:hover {
     color: #58595b;
 }
