Rolover para los cuadros de color de retornos * en ralidad, para cualquier li de la vista publica del proyecto, le pone la clase active con el fadeIn y se la quita con el fadeOut

--- a/view/css/project/widget/rewards.css
+++ b/view/css/project/widget/rewards.css
@@ -3,9 +3,19 @@ div.widget.project-rewards > div.social ul li,
     background-color: #f6f9f4;
 }
 
+div.widget.project-rewards > div.social ul li.active,
+#rewards-summary > div.social ul li.active {
+    background-color: #06f9f4;
+}
+
 div.widget.project-rewards > div.individual ul li,
 #rewards-summary > div.individual ul li{
     background-color: #fbf3f4;
+}
+
+div.widget.project-rewards > div.individual ul li.active,
+#rewards-summary > div.individual ul li.active {
+    background-color: #0bf3f4;
 }
 
 div.widget.project-rewards > div.individual ul li span.name,
