--- a/view/css/goteo.css
+++ b/view/css/goteo.css
@@ -14,6 +14,7 @@
 @import url('blog.css');
 @import url('news.css');
 @import url('discover.css');
+@import url('tipsy/tipsy.css');
 
 div#sub-header > div,
 div#sub-header-secondary > div {
