Los comentarios de blog y updates como los mensajes * Maqutacion de blog/index.html.php y de updates.html.php cambiada * css copiado tal cual * He comentado todos los avatars que se ponen por css porque hay problemas con los avatars trasparentes o los de proporciones diferentes (ya lo arreglaremos) * He vuelto a que el modelo user ponga la imagen 1 si no tiene avatar

--- a/view/css/project/widget/supporters.css
+++ b/view/css/project/widget/supporters.css
@@ -83,7 +83,7 @@ div.widget.project-supporters .supporters ul li .avatar {
     height: 50px;
     text-align: center;
     display: block;
-    background: url('../../avatar/m.png');
+/*    background: url('../../avatar/m.png');    //@FIXME revisar esto porque los avatares trasparentes o pequeños salen con este abajo*/
 }
 
 div.widget.project-supporters .supporters ul li .avatar img {
