--- a/view/css/project/widget/messages.css
+++ b/view/css/project/widget/messages.css
@@ -18,10 +18,6 @@ div.project-messages div.owner {
     background: #e9f4ea url('/view/css/message/beak/2.png') no-repeat left top !important;
 }
 
-div.project-messages div.owner {
-    background: #e9f4ea url('/view/css/message/beak/2.png') no-repeat left top !important;
-}
-
 div.project-messages div.message + div.message,
 div.project-messages div.child + div.message,
 div.project-messages div.child {
@@ -36,7 +32,7 @@ div.project-messages div.child .avatar {
     display: block;
     width: 50px;
     height: 50px;
-    background: url('../../avatar/s.png');    
+/*    background: url('../../avatar/s.png');        //@FIXME revisar esto porque los avatares trasparentes o pequeños salen con este abajo*/
 }
 
 div.project-messages div.message .user,
