--- a/view/css/project/widget/updates.css
+++ b/view/css/project/widget/updates.css
@@ -80,6 +80,53 @@ div.widget.project-updates > div {
 	color:#00ad4e;
 	text-decoration:none;
 }
+/** Comments like messages **/
+div.post-comments div.message {
+    background: #e7e7e7 url('/view/css/message/beak/1.png') no-repeat left top;
+    margin-left: 60px;
+    padding: .5em 1em .5em 1.5em;
+    overflow: visible;
+    position: relative;
+}
+
+div.post-comments div.owner {
+    background: #e9f4ea url('/view/css/message/beak/2.png') no-repeat left top !important;
+}
+
+div.post-comments div.message + div.message {
+    margin-top: 20px;
+}
+
+div.post-comments div.message .avatar {
+    position: absolute;
+    left: -60px;
+    top: 0;
+    display: block;
+    width: 50px;
+    height: 50px;
+/*    background: url('../../avatar/s.png');    //@FIXME revisar esto porque los avatares trasparentes o pequeños salen con este abajo*/
+}
+
+div.post-comments div.message .user {
+    text-transform: none;
+    font-size: 14px;
+    font-weight: bold;
+    margin: 0 0 1em;
+    float: left;
+}
+
+div.post-comments div.message .date {
+    float: right;
+    color: #808080;
+    font-size: 11px;
+}
+
+div.post-comments div.message blockquote {
+    margin: 0;
+    padding: 0;
+    clear: both;
+}
+/** end Comments like messages**/
 /** share goteo **/
 .project-updates .post ul.share-goteo {
 	margin: 0 20px  0 0;
@@ -115,7 +162,8 @@ div.widget.project-updates > div {
 	text-decoration:none;
 }
 
-/** blog comments **/
+/** blog comments
+// He copiado el css de los mensajes
 .project-updates h5 {
 	font: bold 16px Helvetica, Arial, Geneva, sans-serif;
 	text-transform:uppercase;
@@ -166,6 +214,7 @@ div.widget.project-updates > div {
     padding: 0;
     clear: both;
 }
+ end of blog comments **/
 .project-updates div.widget.blog-comment {
     margin: 20px 0 0 0;
 }
@@ -180,7 +229,6 @@ div.widget.project-updates > div {
 	margin: 20px 0 0 0;
 	float:right;
 }
-/** end of blog comments **/
 .side {
 	float:right;
 }
