--- a/view/css/user/widget/supporters.css
+++ b/view/css/user/widget/supporters.css
@@ -19,7 +19,7 @@ div.widget.user-supporters .supporters ul li .avatar {
     height: 50px;
     text-align: center;
     display: block;
-    background: url('../../avatar/m.png');
+/*    background: url('../../avatar/m.png');    //@FIXME revisar esto porque los avatares trasparentes o pequeños salen con este abajo*/
 }
 
 div.widget.user-supporters .supporters ul li .avatar img {
