--- a/view/css/discover.css
+++ b/view/css/discover.css
@@ -2,3 +2,103 @@ body.discover div#main div.widget {
     overflow: hidden;
     margin-bottom: 15px;
 }
+
+div.discover-group div.widget.project {
+    margin: 0px;
+}
+
+div.discover-group div.widget.project + div.widget.project {
+    margin-left: 20px;
+}
+
+div.discover-group {
+    display: none;
+}
+
+div.navi-bar ul.navi {
+    list-style: none;
+    height: 10px;
+    z-index: 900;
+    margin: 0px;
+    padding: 10px;
+}
+
+div.navi-bar ul.navi li {
+    display: block;
+    float: left;
+    width: 1em;
+    height: 1em;
+    overflow: hidden;
+    margin-right: .5em;
+}
+
+div.navi-bar ul.navi li > * {
+    display: block;
+    height: 100%;
+    width: 100%;
+    text-indent: 2000px;
+    line-height: 2000px;
+}
+
+div.navi-bar ul.navi li > a {
+    background-color: #cdcdce;
+}
+
+div.navi-bar ul.navi li > a.active {
+    background-color: #808184;
+}
+
+div.navi-bar {
+    clear: both;
+    display: block;
+}
+
+div.navi-bar a.all{
+    text-decoration: none;
+    text-transform: uppercase;
+    position:relative;
+    top: -20px;
+    right: -775px;
+}
+
+a.discover-arrow {
+    position:relative;
+    top: 150px;
+    color: white;
+    line-height: 24px;
+    text-indent: 24px;
+}
+
+div.discover-arrow-left,
+div.discover-arrow-right {
+    width: 24px;
+}
+
+div.discover-arrow-left {
+    float: left;
+}
+
+div.discover-arrow-right {
+    float: right;
+}
+
+div.discover-arrow-left a.discover-arrow {
+	background: url('carrousel-arrow.png') scroll no-repeat  0 0px;
+}
+
+div.discover-arrow-left a.discover-arrow:hover {
+	background: url('carrousel-arrow-active.png') scroll no-repeat  0 0px;
+}
+
+div.discover-arrow-right a.discover-arrow {
+	background: url('carrousel-arrow.png') scroll no-repeat  0 -24px;
+}
+
+div.discover-arrow-right a.discover-arrow:hover {
+	background: url('carrousel-arrow-active.png') scroll no-repeat  0 -24px;
+}
+
+a.discover-arrow {
+    display: inline-block;
+    vertical-align: middle;
+}
