Cambiando el max-width 940px  por width 940px para quitar problemas cuando hacen la ventana pequeña

--- a/view/css/admin/view.css
+++ b/view/css/admin/view.css
@@ -12,7 +12,7 @@ body.admin div#sub-header {
 }
 
 body.admin div.admin-menu {
-    max-width: 940px;
+    width: 940px;
     margin: 20px auto 0;
 }
 
