Revert "Cambiando el max-width 940px  por width 940px para quitar problemas cuando hacen la ventana pequeÃ±a"
This reverts commit 3cacfd3638d493c06f20961664eb68febfeff418.

--- a/view/css/admin/view.css
+++ b/view/css/admin/view.css
@@ -12,7 +12,7 @@ body.admin div#sub-header {
 }
 
 body.admin div.admin-menu {
-    width: 940px;
+    max-width: 940px;
     margin: 20px auto 0;
 }
 
