--- a/view/css/review/view.css
+++ b/view/css/review/view.css
@@ -10,7 +10,7 @@ body.review div#sub-header {
 
 body.review div#review-menu {
     display: block;
-    width: 940px;
+    max-width: 940px;
     font-size: 13px;
     margin: -2.6em auto 0;    
     background-color: #78d1d1;
