Min width de 10% al termometro horizontal para que no se salga del cuadro

--- a/view/css/project/widget/project.css
+++ b/view/css/project/widget/project.css
@@ -122,6 +122,10 @@ div.widget.project div.meter dl * {
     margin: 0;
 }
 
+div.widget.project div.meter dl .minimum {
+    min-width: 10%;
+}
+
 div.widget.project div.meter dl .optimum,
 div.widget.project div.meter dl .minimum {
     line-height: 14px;
