Colores de cuadro y rollover de retornos corregidos

--- a/view/css/project/widget/rewards.css
+++ b/view/css/project/widget/rewards.css
@@ -1,21 +1,21 @@
 div.widget.project-rewards > div.social ul li,
 #rewards-summary > div.social ul li {
-    background-color: #f6f9f4;
+    background-color: #f3f9f2;
 }
 
 div.widget.project-rewards > div.social ul li.active,
 #rewards-summary > div.social ul li.active {
-    background-color: #06f9f4;
+    background-color: #d5ebd7;
 }
 
 div.widget.project-rewards > div.individual ul li,
 #rewards-summary > div.individual ul li{
-    background-color: #fbf3f4;
+    background-color: #f8e3e3;
 }
 
 div.widget.project-rewards > div.individual ul li.active,
 #rewards-summary > div.individual ul li.active {
-    background-color: #0bf3f4;
+    background-color: #f5c7c8;
 }
 
 div.widget.project-rewards > div.individual ul li span.name,
