--- a/view/css/common.css
+++ b/view/css/common.css
@@ -55,8 +55,8 @@ textarea {
     min-height: 8em;
 }
 
-input[type="text"]:focus,
-input[type="password"]:focus,
+body.user-login input[type="text"]:focus,
+body.user-login input[type="password"]:focus,
 textarea:focus {    
     background-color: white !important;
 }
