Tocando widget de proyectos y otras vistas relacionadas * tagmarks * paddings * chunguerias en la maquetacion de discover * alguna cosita mas habre hecho

--- a/view/css/discover.css
+++ b/view/css/discover.css
@@ -32,8 +32,8 @@ div.searcher{
 }
 
 .searcher input[type="text"]:focus {
-	background-color:#e7e7e7;
-    color: #656566;
+	background-color:#e7e7e7 !important;
+    color: #656566 !important;
 }
 
 
