--- a/view/css/project/edit/rewards.css
+++ b/view/css/project/edit/rewards.css
@@ -70,32 +70,104 @@ body.project-edit div#main.rewards div.superform li.element.reward div.children 
 }
 
 body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li > label {
-    padding-left: 55px;        
+    padding-left: 100px;
     background: none no-repeat 10px center;
     min-height: 32px;
     line-height: 32px;
 }
-     
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_ohl > label {
-    background-image: url('../../icon/m/license/ohl.png');
+
+/* Licencias */
+body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_agpl > label {
+    background-image: url('/view/css/license/agpl.png');
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_cc > label {
-    background-image: url('../../icon/m/license/cc.png');
+body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_apache > label {
+    background-image: url('/view/css/license/apache.png');
 }
+
+body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_balloon > label {
+    background-image: url('/view/css/license/balloon.png');
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_bsd > label {
+    background-image: url('/view/css/license/bsd.png');
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_cc0 > label {
+    background-image: url('/view/css/license/cc0.png');
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_ccby > label {
+    background-image: url('/view/css/license/ccby.png');
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_ccbync > label {
+    background-image: url('/view/css/license/ccbync.png');
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_ccbyncnd > label {
+    background-image: url('/view/css/license/ccbyncnd.png');
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_ccbyncsa > label {
+    background-image: url('/view/css/license/ccbyncsa.png');
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_ccbynd > label {
+    background-image: url('/view/css/license/ccbynd.png');
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_ccbysa > label {
+    background-image: url('/view/css/license/ccbysa.png');
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_fal > label {
+    background-image: url('/view/css/license/fal.png');
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_fdl > label {
+    background-image: url('/view/css/license/fdl.png');
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_freebsd > label {
+    background-image: url('/view/css/license/freebsd.png');
+}
+
 body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_gpl > label {
-    background-image: url('../../icon/m/license/gpl.png');
+    background-image: url('/view/css/license/gpl.png');
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_lgpl > label {
+    background-image: url('/view/css/license/lgpl.png');
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_mit > label {
+    background-image: url('/view/css/license/mit.png');
+}
+body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_mpl > label {
+    background-image: url('/view/css/license/mpl.png');
 }
 body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_odbl > label {
-    background-image: url('../../icon/m/license/odbl.png');
+    background-image: url('/view/css/license/odbl.png');
+}
+body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_odcby > label {
+    background-image: url('/view/css/license/odcby.png');
+}
+body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_oshw > label {
+    background-image: url('/view/css/license/oshw.png');
+}
+body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_pd > label {
+    background-image: url('/view/css/license/pd.png');
+}
+body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_php > label {
+    background-image: url('/view/css/license/php.png');
+}
+body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_tapr > label {
+    background-image: url('/view/css/license/tapr.png');
 }
 body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_xoln > label {
-    background-image: url('../../icon/m/license/xoln.png');
-}
-
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_agpl > label {
-    background-image: url('../../icon/m/license/agpl.png');
-}
+    background-image: url('/view/css/license/xoln.png');
+}/* Fin licencias */
 
 body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-amount > div.contents > input {
     width: 3em;
